--- a/app/views/home/hakkimizda.html.erb
+++ b/app/views/home/hakkimizda.html.erb
@@ -6,10 +6,14 @@
     <div class="p-inner">
       <div class="p-summary">
         <h3>Hakkımızda</h3>
-        <p>BenVarım platformu, Dünya’da nice örneği olan İnternet’ten bağış toplama (online fundraising) sisteminin Türkiye’deki ilk ve tek örneği olarak San Francisco'da ve İstanbul'da yaşayan, dört Türk girişimcisi tarafından 2011 yılında kurulmuştur.</p>
 
-        <p>Kurucular, birer aktivist, gönüllü ve sivil toplum yöneticisi olarak emek verdikleri Türkiye’ye verimli bir bağış platformu kazandırmak için biraraya geldiler. Gönüllülerin de katılımıyla her geçen gün büyüyen BenVarım ailesi, sivil toplum kuruluşlarına teknik altyapı sağlayarak, kurumların maddi ve manevi olarak güçlenmesi için çalışmalarını sürdürmektedir.</p>
+        <p>BenVarım, Türkiye'deki sivil toplum kuruluşlarının kaynak yaratma ve tanıtım faaliyetlerini kuvvetlendirmek üzere oluşturulmuş bir sosyal bağış platformudur. Herhangi bir ticari kuruluşa bağlı olmayan platformumuzun her türlü teknik, idari ve tanıtım masraflarını kurucular olarak bu aşamada kendi kaynaklarımızla gönüllü olarak karşılıyoruz ve yararlı bir girişim yaratmanın haklı gururunu taşıyoruz.</p>
+
+        <p>Önceliğimizi sivil toplum kuruluşlarına verdiğimiz katma değerin artmasını sağlamak olarak belirledik. Uzun vadede BenVarım projesinin teknik ve ekonomik olarak sürdürülebilir kılmak için çeşitli alternatifler modeller üzerine çalışıyoruz.</p>
+
+        <p>Hayal ettiğimiz aşamaya gelene uzun bir yolumuz olduğunun bilincindeyiz. Bu sürede sizlerin eleştirileri ve önerilerinize ihtiyacımız olduğu gibi, ekibimizi genişletmeye de ihtiyacımız var. Lütfen bizimle iletişimde kalmaya ve bizi çevrenize duyurmaya devam edin. Ekibimize katılmak için lütfen kariyer bölümüzü ziyaret edin ve bizimle <%=link_to "iletişim", :new_contact_form %> geçin.</p>
       </div>
+
 
       <div class="p-details">
         <%= render 'home/includes/founders'%>
