--- a/app/views/home/includes/_jobs.erb
+++ b/app/views/home/includes/_jobs.erb
@@ -1,13 +1,20 @@
-
-
 <h4>Açık Pozisyonlar:</h4>
 <ul>
+  <!--
   <li><a href="#pazarlama-satis-direktoru">Pazarlama ve Satış Koordinatörü</a></li>
-  <li><a href="#yazilim-muhendisi">Yazılım Mühendisi</a></li>
   <li><a href="#kurumsal-iletisim-koordinatoru">Halkla İlişkiler Koordinatörü</a></li>
+  -->
+  <li><a href="#yazilim-muhendisi">Yazılım Mühendisi</a></li>
+  <li><a href="#stajyer">Stajyer (İş Geliştirme, Pazarlama, Yazılım, Tasarım)</a></li>
+
 </ul>
 
 <br/><br/>
+
+<hr/>
+
+
+<!--
 
 <hr/>
 <div id="job-kurumsal-iletisim-koordinatoru" class="job">
@@ -51,6 +58,8 @@
 
 <br/><br/>
 <hr/>
+-->
+
 <div id="job-yazilim-muhendisi" class="job">
   <a id="yazilim-muhendisi"></a>
   <h3>YAZILIM MÜHENDİSİ</h3>
@@ -86,6 +95,36 @@
 
 <br/><br/>
 <hr/>
+<div id="job-stajyer" class="job">
+  <a id="stajyer"></a>
+  <h3>STAJYER (İş Geliştirme, Pazarlama, Yazılım, Tasarım)</h3>
+  <p>BenVarım projesinin gelişmesinde kurucularla birebir çalışarak, aktif sorumluluk alacak, heyecanlı üniversite öğrencileri arıyoruz. Adaylar eğitimlerine devam ediyor veya başka bir işte çalışıyor olabilirler. Haftada yaklaşık 8-15 saatlik esnek çalışma saati beklenir; bu pozisyon için ücret ödenmez.</p>
+
+  <p>BenVarım kurucuları, ekibe dahil olacak tüm adayların, yöneticilik becerisi, sosyal girişimcilik ve kariyer gelişimine önem verir ve kişisel gelişimlerini destekler. Projede çalışacak stajyerlere çeşitli konularda sorumluluk alma şansı verilecek ve inisiyatif almaları teşvik edilecektir.</p>
+
+  <p><strong>BAŞVURU</strong></p>
+
+  <p>Aranan niteliklere sahip adayların, kariyer@benvarim.com adresine, adayın özgeçmişi ile beraber kısa bir tanıtım mektubu yazıp yollamaları gerekmektedir. (Lütfen tanıtım mektubunuzda, pozisyonun sizi heyecanlandıran kısmı ve sizi diğer adaylardan ayıran özelliğinizi açıklayınız.)</p>
+
+  <p><strong>“OLMAZSA OLMAZ” NİTELİKLER</strong></p>
+
+  <ul>
+    <li>İstanbul, Ankara, İzmir ve Eskişehir'deki üniversitelerin 3. veya 4. sınıfında okuyor olmak,</li>
+    <li>Çok iyi derecede Türkçe ve İngilizce, yazılı ve sözlü dil hakimiyetine sahip olmak,</li>
+    <li>İnsan ilişkileri güçlü ve düşüncelerini net anlatabilecek bir yapıda olmak,</li>
+    <li>Microsoft Office ve eşdeğer programlara çok iyi derecede hakim olmak,</li>
+    <li>En az bir üniversite kulübu veya sivil toplum kuruluşunda aktif olarak görev almış olmak.</li>
+  </ul>
+
+  <p><strong>İŞ TANIMI</strong></p>
+  <ul>
+    <li>İş geliştirme, pazarlama, satış, tasarım veya yazılım konularında kurucular ile beraber çalışma,</li>
+    <li>Çeşitli sivil toplum kuruluşları ile yakın ilişkiler kurma ve projelerini gerçekleştirmelerini sağlama,</li>
+    <li>Benvarim.com projesinin Türkiye genelinde yayılmasını sağlamak üzere çeşitli fikirler üretip, icra etme.</li>
+  </ul>
+</div>
+
+<!--
 <div id="job-pazarlama-satis-direktoru" class="job">
   <a id="pazarlama-satis-direktoru"></a>
 	<h3>PAZARLAMA VE SATIŞ KOORDİNATÖRÜ</h3>
@@ -121,3 +160,5 @@
 <li>Türkiye’de sivil toplum sektörüyle ilgili analizler yapıp, sektörel raporlar hazırlamak,</li>
 <li>Kurucuların yönlendirmesi doğrultusunda, iş geliştirme, pazarlama, halkla ilişkiler, organizasyon yöneticiliği konularında aktif çalışmak.</li>
 </ul>
+</div>
+-->
