--- a/app/views/home/includes/_volunteers.erb
+++ b/app/views/home/includes/_volunteers.erb
@@ -19,13 +19,7 @@
       <p>SMMM ünvanına sahip olan Onuralp Armağan, BenVarım projesini gönüllü olarak desteklemekte ve yine gönüllü olarak mali danışmanlığını yapmaktadır. Kendisi Boğaziçi Üniversitesi İşletme Bölümü'nde doktora çalışmalarını yürütmekte olup aynı kurum bünyesinde araştırma görevlisi olarak çalışmaktadır.</p>
       <p>Üniversite dönemi ve sonrasında Rotaract 2420 bünyesinde pekçok sosyal sorumluluk projesinde aktif olarak rol almıştır. Gerek dernek düzeyinde gerekse bölge düzeyinde saymanlık ve mali danışmanlık yapmış olan Onuralp'in dernekler ve vakıflar mevzuatı üzerine geniş tecrübesi olup bu konuda pek çok eğitim ve seminer vermiştir. Boğaziçi Üniversitesi Uluslararası İlişkiler Bölümü mezunu olup aynı üniversiteden MBA derecesi vardır.</p>
       <div class="p-other">
-        <a href="http://www.linkedin.com/in/leventbas" target="_blank" title="LinkedIn profilini görüntüle">
-          <img src="/images/social_media_mini_icons/png/linkedin.png" />
-        </a>
-        <a href="http://twitter.com/leventbas" target="_blank" title="Twitter profilini görüntüle">
-          <img src="/images/social_media_mini_icons/png/twitter.png" />
-        </a>
-        <a href="mailto:levent@benvarim.com" title="E-posta gönder">
+        <a href="mailto:onuralp@benvarim.com" title="E-posta gönder">
           <img src="/images/social_media_mini_icons/png/email.png" />
         </a>
       </div>
