--- a/app/views/home/kariyer.html.erb
+++ b/app/views/home/kariyer.html.erb
@@ -6,8 +6,8 @@
     <div class="p-inner">
       <div class="p-summary">
         <h3>Bizimle çalışmak ister misin?</h3>
-        <p>Benvarim.com, Türkiye’nin ilk internet üzerinden bağış toplama portalıdır. İngiltere, ABD, Almanya ve Japonya’da başarılı örnekleri olan Benvarim.com, Türkiye’de ilk kez uygulanan bir sosyal yardım projesidir. Kurucuları, İstanbul &nbsp;ve San Francisco’da yaşayan, uzun yıllar sivil toplum kuruluşlarında yöneticilik, gönüllülük ve aktivistlik yapmış olan, farklı profosyonel disiplinlerde çalışan girişimcilerdir. Kurucular, Türkiye’deki 3. Sektör denilen Sivil Toplum Örgütlerine önemli bir katma değer yaratma arzusuyla 2010 Kasım ayından itibaren beraber çalışmaktadırlar.</p>
-        <p>Benvarim.com kurucuları, ekibe dahil olacak tüm adayların, takıma yeni bir heyecan ve bilgi birikimi getirmesini en önemli kriter olarak belirlemiştir.</p>
+        <p>BenVarım, Türkiye’nin ilk internet üzerinden bağış toplama portalıdır. İngiltere, ABD, Almanya ve Japonya’da başarılı örnekleri olan BenVarım, Türkiye’de ilk kez uygulanan bir sosyal yardım projesidir. Kurucuları, İstanbul &nbsp;ve San Francisco’da yaşayan, uzun yıllar sivil toplum kuruluşlarında yöneticilik, gönüllülük ve aktivistlik yapmış olan, farklı profosyonel disiplinlerde çalışan girişimcilerdir. Kurucular, Türkiye’deki 3. Sektör denilen Sivil Toplum Örgütlerine önemli bir katma değer yaratma arzusuyla 2010 Kasım ayından itibaren beraber çalışmaktadırlar.</p>
+        <p>BenVarım kurucuları, ekibe dahil olacak tüm adayların, takıma yeni bir heyecan ve bilgi birikimi getirmesini en önemli kriter olarak belirlemiştir.</p>
       </div>
 
       <div class="p-details">
