--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
         </div>
         <div class="size1of3">
             <p>“Sosyal medya kanalıyla yardım toplama ve
-            bağışçıya uaşmanın en güzel örneği.”</p>
+            bağışçıya ulaşmanın en güzel örneği.”</p>
             <p class="media-icon mi2">webrazzi</p>
         </div>
         <div class="size1of3 lastUnit">
