--- a/app/views/home/includes/_founders.erb
+++ b/app/views/home/includes/_founders.erb
@@ -15,7 +15,7 @@
     </div>
     <div class="pr-details">
       <div class="p-name">Levent Baş</div>
-      <div class="p-title">Proje Direktörü</div>
+      <div class="p-title">Genel Proje Direktörü</div>
       <p>BenVarım projesinin ekip liderliğini yürüten Levent Baş, profosyonel olarak İstanbul, San Francisco ve Singapur'da güneş enerjisi sektöründe çalışmalar yapmaktadır.</p>
       <p>Okul yılları ve sonrasında, çeşitli sivil toplum organizasyonlarında gönüllü ve yönetici olarak çalışan Levent'in, başarılı girişimleri arasında Boğaziçi Üniversitesi'nin ilk güneş enerjili aracının üretimi ve Türkiye'de ulusal çapta üniversite yelkenciliği sistemi ile yelken eğitim sisteminin kurulması vardır.</p>
       <p>Levent'in hem Türkiye'de, hem ABD'de sosyal projelerdeki çalışmaları, BenVarım projesinin çıkış noktası olmuştur. Kendisi, Boğaziçi Üniversitesi Makina Mühendisliği mezunu ve INSEAD MBA öğrencisidir.</p>
