TOG anasayfaya gelsin, FAQ duzeltilsin, newsletter bug duzeltilsin

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -34,6 +34,7 @@
         <div class="w-title">Destekleyebileceğiniz kurumlar</div>
         <a href="http://benvarim.com/kurum/unicef-turkiye-milli-komitesi" id="fc-unicef" title="UNICEF Türkiye Milli Komitesi">UNICEF Türkiye Milli Komitesi</a>
         <a href="http://benvarim.com/kurum//turkiye-egitim-gonulluleri-vakfi-tegv" id="fc-tegv" title="Türk Eğitim Gönüllüleri Vakfı">Türk Eğitim Gönüllüleri Vakfı</a>
+        <a href="http://benvarim.com/kurum/toplum-gonulluleri-vakfi-tog" id="fc-tog" title="Toplum Gönüllüleri Vakfı">Toplum Gönüllüleri Vakfı</a>
         <a href="http://benvarim.com/kurum/bugday-ekolojik-yasami-destekleme-dernegi" id="fc-bugday" title="Buğday Ekolojik Yaşamı Destekleme Derneği">Buğday Ekolojik Yaşamı Destekleme Derneği</a>
 
 
