--- a/app/views/home/sik_sorulan_sorular.erb
+++ b/app/views/home/sik_sorulan_sorular.erb
@@ -6,7 +6,8 @@
     <div class="p-inner">
       <div class="p-summary">
         <h3>Sık Sorulan Sorular</h3>
-        <p>Merak ettiğiniz her türlü soruyu bize sorabilirsiniz. Merak ettiğiniz her türlü soruyu bize sorabilirsiniz. Merak ettiğiniz her türlü soruyu bize sorabilirsiniz. Merak ettiğiniz her türlü soruyu bize sorabilirsiniz. Merak ettiğiniz her türlü soruyu bize sorabilirsiniz.</p>
+        <p>BenVarım Platformu, Türkiye’de ilk kez uygulanan bir sosyal girişim olduğu için, ilk yayına açıldığı zamandan beri pek çok soru aldık. En çok öne çıkanlar sistemin tam olarak ne olduğu, nasıl işlediği, ne amaca hizmet ettiği, kurucuların ve ekibin kimlerden oluştuğuydu. Karşımıza sık sık çıkan bu soruların cevaplarını aşağıda üç kategori altında sizlerle paylaşıyoruz. Eğer aradığınız sorunun cevabını bulamazsanız, lütfen bizimle <%=link_to "iletişime", :new_contact_form %> geçiniz.</p>
+
       </div>
 
       <div class="p-details">
