--- a/app/views/home/includes/_volunteers.erb
+++ b/app/views/home/includes/_volunteers.erb
@@ -1,6 +1,6 @@
 <div class="team-profile clearfix">
 
-  <div class="profile clearfix" id="p-levent">
+  <div class="profile clearfix" id="p-onuralp">
     <div class="profile_pic clearfix">
       <div class="_pm_container">
         <div class="_pm_shadow r"></div>
@@ -25,6 +25,94 @@
       </div>
     </div>
   </div><!-- end of .profile -->
+
+
+
+  <div class="profile clearfix" id="p-melis">
+    <div class="profile_pic clearfix">
+      <div class="_pm_container">
+        <div class="_pm_shadow r"></div>
+        <div class="_pm_shadow l"></div>
+        <div class="_pm">
+          <div class="_pm_inner">
+            <img alt="Gerçek Karakuş" class="alt-img" src="/images/about/melis-okan.jpg" width="152" />
+            <div class="img_inner_shadow"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="pr-details">
+      <div class="p-name">Melis Okan</div>
+      <div class="p-title">İş Geliştirme Sorumlusu</div>
+      <p>BenVarım projesine gönüllü olarak İş Geliştirme ve Halkla İlişkiler konularında destek veren Melis, 1985 yılında İstanbul'da doğdu. Ortaokul ve liseyi Saint Michel Fransız Lisesi'nde tamamladıktan sonra, yüksek öğrenimine Boğaziçi Üniversitesi ile State University of New York' da devam ederek, Uluslararası İlişkiler (ana dal) ve Sosyoloji (yan dal) alanlarında çift diploma ile mezun oldu.</p>
+      <p>Sivil toplumun gerekliliğinin ve öneminin farkına erken öğrencilik yıllarında varan Melis, <a href="http://www.greenpeace.org/turkey/tr/" target="_blank">Greenpeace</a> ve <a href="http://benvarim.com/kurum//turkiye-egitim-gonulluleri-vakfi-tegv">Türkiye Eğitim Gönüllüleri Vakfı</a> gibi Türkiye'nin önde gelen sivil toplum kuruluşlarında gönüllü olarak calışarak STK örgütlenmesi hakkında tecrübe edindi.  Bu tecrübenin sonucunda, mezuniyet sonrası New York'ta kar amacı gütmeyen bir kuruluş olan <a href="http://www.americanturkishsociety.org/" target="_blank">The American Turkish Society</a>'de yönetici asistanı ve program koordinatörü olarak kariyerine başladı.</p>
+      <p>Bugüne kadar edindiği bilgi ve tecrübeyi, Türkiye'nin teknolojiyi ve sosyal medyayı ön plana çıkartan ilk sosyal girişimi olan BenVarım'a aktarmakta ve bu yolla daha bilinçli bir toplumun oluşmasına katkıda bulunduğuna inanarak görevine devam etmektedir.</p>
+      <div class="p-other">
+        <a href="http://www.linkedin.com/pub/melis-okan/18/587/b9b" target="_blank" title="LinkedIn profilini görüntüle">
+          <img src="/images/social_media_mini_icons/png/linkedin.png" />
+        </a>
+        <a href="http://twitter.com/melisokan" target="_blank" title="Twitter profilini görüntüle">
+          <img src="/images/social_media_mini_icons/png/twitter.png" />
+        </a>
+        <a href="http://www.facebook.com/melis.okan" target="_blank" title="Facebook profilini görüntüle">
+          <img src="/images/social_media_mini_icons/png/facebook.png" />
+        </a>
+        <a href="mailto:melis@benvarim.com" title="E-posta gönder">
+          <img src="/images/social_media_mini_icons/png/email.png" />
+        </a>
+      </div>
+    </div>
+  </div><!-- end of .profile -->
+
+
+
+
+
+  <div class="profile clearfix" id="p-sukru">
+    <div class="profile_pic clearfix">
+      <div class="_pm_container">
+        <div class="_pm_shadow r"></div>
+        <div class="_pm_shadow l"></div>
+        <div class="_pm">
+          <div class="_pm_inner">
+            <img alt="Gerçek Karakuş" class="alt-img" src="/images/about/sukru-bezen.jpg" width="152" />
+            <div class="img_inner_shadow"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="pr-details">
+      <div class="p-name">Şükrü Bezen</div>
+      <div class="p-title">Yazılım Mühendisi</div>
+
+      <p>BenVarım projesinde yazılım mühendisi olarak görev yapan Şükrü Bezen, lisans derecesini ODTÜ Bilgisayar Mühendisliğinden almış ve aynı bölümde master öğrencisi olarak eğitim hayatına devam etmektedir.</p>
+
+      <p>Lisans derecesi süresince çeşitli sivil toplum örgütlerinin
+      çalışmalarına katılmış ve ilgili projelerin bağış kampanyalarının
+      tanıtılması sürecine katkıda bulunmuştur. Web ve mobil alanlarında
+      freelancer olarak  çalışmakta olan Şükrü, aynı zamanda Avrupa elektrik
+      elektronik öğrencileri topluluğunun Ankara kolunun başkan yardımcılığı
+      görevini sürdürmektedir. Hobileri arasında tango dansı ve yüzme sporu
+      yer almaktadır. <a href="http://www.sukrubezen.com" target="_blank">http://www.sukrubezen.com</a></p>
+
+
+      <div class="p-other">
+        <a href="mailto:sukru@benvarim.com" title="E-posta gönder">
+          <img src="/images/social_media_mini_icons/png/email.png" />
+        </a>
+      </div>
+    </div>
+  </div><!-- end of .profile -->
+
+
+
+
+
+
+
+
+
+
 
 
 
