--- a/app/views/organization_mailer/dailymail.html.erb
+++ b/app/views/organization_mailer/dailymail.html.erb
@@ -1,21 +1,44 @@
 <%=render :partial => "email_layouts/header",
   :locals => {
-    :title => "Benvarım.com'a Hoşgeldin!"
+    :title => "Benvarım.com günlük özet"
   }%>
 
-Merhaba <%=@organization.user.name%>,<br/><br/>
+Merhaba <%=@name%>,<br/><br/>
 
-Gün içerisinde <a href="<%=organization_path(@organization, :only_path => false)%>"><%=@organization.name%></a> isimli kurumunuzda açılmış olan bağış sayfalarını aşağıda görebilirsiniz. <br/><br/>
-
-
-<% @pages.each do |page| %>
-
-Sayfanın ismi             : <%=page.title%><br/>
-Sayfayı açan kullanıcı    : <%=page.user.name%><br/>
-Sayfanın bağış hedefi     : <%=page.goal%> TL<br/>
-
-<% end %>
+<% if @pages.length > 0 %>
+<h3> Gün içerisinde <a href="<%=organization_url @organization%>"><%=@organization.name%></a> isimli kurumunuz için açılmış olan bağış sayfalarını aşağıda görebilirsiniz.</h3>
+<ul>
+  <% @pages.each do |page| %>
+  <li>
+  Sayfanın ismi             : <a href="<%=page_url page%>"><%=page.title%></a><br/>
+  Sayfayı açan kullanıcı    : <a href="<%=user_url page.user%>"><%=page.user.name%></a><br/>
+  Sayfanın bağış hedefi     : <%=page.goal_str%> TL<br/>
+  </li>
+  <% end %>
+</ul>
 <br/><br/>
+<% end %>
 
-
+<% if @payments.length > 0%>
+<h3>Gün içerisinde <a href="<%=organization_url @organization%>"><%=@organization.name%></a> isimli kurumunuza yapılan bağışları aşağıda görebilirsiniz.</h3>
+<% toplam = 0 %>
+<ul>
+  <% @payments.each do |payment| %>
+  <li>
+    <% if payment.project %>
+      Proje  : <a href="<%=project_url payment.project%>"><%=payment.project.name%></a><br/>
+    <% end %>
+    <% if payment.page %>
+      Sayfa  : <a href="<%=page_url payment.page%>"><%=payment.page.title%></a><br/>
+    <% end %>
+    İsim   : <%=payment.name%><br/>
+    Not    : <%=payment.note%><br/>
+    Miktar : <%=payment.amount_in_currency_str%> <%=payment.currency_sign%><br/><br/>
+    <% toplam += payment.amount %>
+  </li>
+  <% end %>
+</ul>
+Toplam: <%=number_with_precision(toplam, :locale => :tr)%> TL
+<br/><br/>
+<% end %>
 <%=render :partial => "email_layouts/footer" %>
