--- a/app/views/organization_mailer/dailymail.text.erb
+++ b/app/views/organization_mailer/dailymail.text.erb
@@ -1,14 +1,33 @@
-<%=render :partial => "email_layouts/header" %>
-Merhaba <%=@organization.user.name%>,
+<%=render :partial => "email_layouts/header"%>
 
-Gün içerisinde <a href="<%=organization_path(@organization, :only_path => false)%>"><%=@organization.name%></a> isimli kurumunuzda açılmış olan bağış sayfalarını aşağıda görebilirsiniz.
+Merhaba <%=@name%>,
 
+<% if @pages.length > 0 %>
+** Gün içerisinde <%=@organization.name%> isimli kurumunuz için açılmış olan bağış sayfalarını aşağıda görebilirsiniz.
+  <% @pages.each do |page| %>
+  *
+  Sayfanın ismi             : <%=page.title%>
+  Sayfayı açan kullanıcı    : <%=page.user.name%>
+  Sayfanın bağış hedefi     : <%=page.goal_str%> TL
+  <% end %>
+<% end %>
 
-<% @pages.each do |page| %>
-
-Sayfanın ismi             : <%=page.title%>
-Sayfayı açan kullanıcı    : <%=page.user.name%>
-Sayfanın bağış hedefi     : <%=page.goal%> TL
-
+<% if @payments.length > 0%>
+** Gün içerisinde <%=@organization.name%> isimli kurumunuza yapılan bağışları aşağıda görebilirsiniz.
+<% toplam = 0 %>
+  <% @payments.each do |payment| %>
+  *
+  <% if payment.project %>
+  Proje  : <%=payment.project.name%>
+  <% end %>
+  <% if payment.page %>
+  Sayfa  : <%=payment.page.title%>
+  <% end %>
+  İsim   : <%=payment.name%>
+  Not    : <%=payment.note%>
+  Miktar : <%=payment.amount_in_currency_str%> <%=payment.currency_sign%>
+  <% toplam += payment.amount %>
+  <% end %>
+Toplam: <%=number_with_precision(toplam, :locale => :tr)%> TL
 <% end %>
 <%=render :partial => "email_layouts/footer" %>
