--- a/app/views/user_mailer/dailymail.text.erb
+++ b/app/views/user_mailer/dailymail.text.erb
@@ -1,3 +1,4 @@
+<%=render :partial => "email_layouts/header"%>
 Merhaba <%=@page.user.name%>,
 
 Gün içerisinde <%=@page.title%>(<%=page_path(@page, :only_path => false)%>) isimli sayfanıza yapılmış olan bağışları aşağıda görebilirsiniz.
@@ -5,17 +6,14 @@ Gün içerisinde <%=@page.title%>(<%=page_path(@page, :only_path => false)%>) is
 <% toplam = 0 %>
 <% @payments.each do |payment| %>
 
-İsim   : <%=payment.name%>
-Not    : <%=payment.note%>
-Miktar : <%=payment.amount%> TL
-
+İsim   : <%=payment.name%><br/>
+Not    : <%=payment.note%><br/>
+Miktar : <%=payment.amount_in_currency_str%> <%=payment.currency_sign%><br/><br/>
 <% toplam += payment.amount %>
 <% end %>
 
-Toplam: <%= toplam %> TL
-Bu güne kadar yapılan toplam bağış: <%=@page.collected%> TL
+Toplam: <%=number_with_precision(toplam, :locale => :tr)%> TL
+Bu güne kadar yapılan toplam bağış: <%=@page.collected_str%> TL
 
 
-Twitter: http://twitter.com/#!/Ben_Varim
-Facebook: http://www.facebook.com/BenVarim.Platformu
-Email: iletisim@benvarim.com
+<%=render :partial => "email_layouts/footer" %>
