sayfa aktifle deaktifle kertenkele, bayraminiz kutlu olsun

--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -1,3 +1,5 @@
 <p>
-  <div class="msg">MENU: <%=link_to "impersonate", admin_impersonate_path%> | <%=link_to "kurumlar", admin_organizations_path%></div>
+  <div class="msg">MENU: <%=link_to "impersonate", admin_impersonate_path%> |
+  <%=link_to "kurumlar", admin_organizations_path%> |
+  <%=link_to "sayfalar", admin_pages_path%></div>
 </p>
