--- a/app/views/projects/_list_projects.html.erb
+++ b/app/views/projects/_list_projects.html.erb
@@ -35,7 +35,7 @@
         </div>
       <% elsif defined?(link_to_organizations) && link_to_organizations == true %>
         <div class="row row-action">
-          <%= link_to 'Tüm projeleri görüntüle', all_organizations_path, :class=>"show-all" %>
+          <%= link_to 'Tüm projeleri görüntüle', all_projects_path, :class=>"show-all" %>
         </div>
       <% end %>
 
