emails in kertenkele

--- a/app/views/admin/_menu.html.erb
+++ b/app/views/admin/_menu.html.erb
@@ -1,5 +1,6 @@
 <p>
   <div class="msg">MENU: <%=link_to "impersonate", admin_impersonate_path%> |
   <%=link_to "kurumlar", admin_organizations_path%> |
-  <%=link_to "sayfalar", admin_pages_path%></div>
+  <%=link_to "sayfalar", admin_pages_path%> |
+  <%=link_to "e-postalar", export_emails_path%></div>
 </p>
