removes extra jqueryui on the page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -183,7 +183,7 @@ Bv.Config = {
 
 
 <!-- scripts concatenated and minified via ant build script-->
-<script type="text/javascript" src="/javascripts/jquery-ui.min.js"></script>
+<script type="text/javascript" src="/jquery-ui-1.8.16.custom/js/jquery-ui-1.8.16.custom.min.js"></script>
 <%= include_javascripts :workspace %>
 
 <!-- end concatenated and minified scripts-->
