--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -56,7 +56,7 @@
 
 
   <div class="line">
-    <div class="size1of2">
+    <div class="size1of2 column">
       <%=render :partial => "projects/list_projects",
         :locals => {
           :show_edit_link => false,
@@ -65,7 +65,7 @@
           :link_to_organizations => true
         }%>
     </div>
-    <div class="size1of2 lastUnit">
+    <div class="size1of2 lastUnit column">
        <% if @top_pages.length > 0 %>
         <%=render :partial => "pages/list_pages_condensed",
           :locals => {
